# near_demo

./: .env.docker.example  .env.example  .gitignore  CLAUDE.md  Cprojectgradnear_demotmp_nearblocks_samples.json  README.md  START_APP.md  SYSTEM_ARCHITECTURE.md  TRANSACTION_BOTTLENECKS.md  docker-compose.yml  package-lock.json  package.json  start.bat  start.sh
.agents/memory/: 01-04-core-concepts.md  05-06-data-operations.md  07-09-data-integrity.md  10-12-implementation.md  best-practices-security.md  docs-data-integration.md  docs-learning.md  docs-primitives-tutorials.md  docs-protocol.md  index.md  main-documents.md  near_business_vs_relational_db.md  project.md  property_history_indexer.md
.agents/rules/: 01-04-core-concepts.md  05-06-data-operations.md  07-09-data-integrity.md  10-12-implementation.md  best-practices-security.md  docs-data-integration.md  docs-learning.md  docs-primitives-tutorials.md  docs-protocol.md  document-reference.md  documents.md  index.md  main-documents.md  project-requirement.md  project.md
.claude/: settings.local.json
backend/: .env.example  Dockerfile  package-lock.json  package.json
backend/src/: index.js  near.js  routes.js
contract/: Cargo.toml  README.md  rust-toolchain.toml
contract/src/: index.js  lib.rs
frontend/: Dockerfile  index.html  nginx.conf
frontend/css/: style.css
frontend/js/: app.js
scripts/: build-contract.js  create-account.js  deploy-contract.js  sample_properties_10.json  sample_properties_50.json
